[metadata]
name = async-executor
version = 0.1.0
url = https://github.com/nvllsvm/python-async-executor
author = Andrew Rabert
author_email = ar@nullsum.net
description = Async execution pool
long_description = file: README.md
long_description_content_type = text/markdown

[options]
py_modules = async_executor
